--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,12 @@ deploy {
 // Set this to true to enable desktop support.
 def includeDesktopSupport = true
 
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
+}
+
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
@@ -51,6 +57,8 @@ dependencies {
     implementation wpi.deps.vendor.java()
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
+
+    compile "com.github.dominikWin:badlog:v0.1.1"
 
     testImplementation 'junit:junit:4.12'
 
