--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ repositories {
     maven {
         url "https://jitpack.io"
     }
+    maven { url 'https://nexus.otake.pw/repository/maven-public/' }
 }
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
@@ -55,6 +56,7 @@ dependencies {
 
 
     implementation wpi.deps.vendor.java()
+    implementation 'pw.otake.pseudoresonance:pixy2-java-api:1.4.1'
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
